2014-02-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Simplify.

2014-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, m4/lj-system.m4, native/Makefile.am: Simplify.

2014-02-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luajit.test (new): Shell script for a basic test.
	* jittest.c (new): Source code for test program.
	* Makefile.am, configure.ac, native/Makefile.am,
	native/configure.ac: Proxy build system.
	* include, m4: New directories

2014-02-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import LuaJIT-2.0.2/ from
	  http://luajit.org/download/LuaJIT-2.0.2.tar.gz.
