@@ -1,3 +1,7 @@
+2014-02-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* m4/lj-system.m4: Define LUAJIT_OS for native/buildvm.
+
 2014-02-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* configure.ac: Simplify.
